fix(style.css): increase font size for readability

--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@
 
 html {
     font-family: var(--font-root);
-    font-size: 0.75rem;
+    font-size: 13px;
     background-color: var(--background);
 }
 
